# CMakeQtTest

./: .gitignore  CMakeLists.txt  TestForm.cpp  TestForm.h
